gears/system/event-broker/event-broker-sdk/tests/trybuild/producer/direct_rejects_db_dedup.stderr
error[E0308]: mismatched types
 --> tests/trybuild/producer/direct_rejects_db_dedup.rs:5:24
  |
5 |         .deduplication(DbDeduplication::managed(ProducerMode::Chained).key("orders"));
  |          ------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `DirectDeduplication`, found `ManagedDeduplicationBuilder`
  |          |
  |          arguments to this method are incorrect
  |
note: method defined here
 --> src/producer/direct.rs
  |
  |     pub fn deduplication(
  |            ^^^^^^^^^^^^^
