gears/system/event-broker/event-broker-sdk/tests/trybuild/producer/direct_rejects_db_dedup.rs
use event_broker_sdk::{DbDeduplication, Producer, ProducerMode};

fn main() {
    let _ = Producer::builder()
        .deduplication(DbDeduplication::managed(ProducerMode::Chained).key("orders"));
}
